# tutorial_fastapi

./: Makefile  pyproject.toml  requirements.txt  run.sh
app/: main.py  schemas.py
