[tool.poetry]
name = "tutorial_fastapi"
version = "0.1.0"
description = ""
authors = ["Anubhav Dhiman <21242774+zdhiman@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
uvicorn = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
