[tool.poetry]
name = "tutorial_fastapi"
version = "0.1.0"
description = "FastAPI Tutorial"
authors = ["Anubhav Dhiman"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
Jinja2 = "^3.1.2"
uvicorn = "^0.18.2"
pydantic = "^1.9.1"
gunicorn = "^20.1.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
